--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@types/react-navigation": "^3.4.0",
     "axios": "^0.21.1",
     "expo": "~41.0.1",
+    "expo-facebook": "~11.0.5",
+    "expo-google-app-auth": "^8.1.7",
     "expo-splash-screen": "^0.10.2",
     "expo-status-bar": "^1.0.4",
     "formik": "^2.2.8",
