--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,9 @@
   "author": "cristiCeban",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.5",
-    "@types/node": "^15.3.0",
+    "@types/node": "^15.6.0",
     "@types/python-shell": "^0.4.2",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
