--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.5",
+    "@types/multer": "^1.4.5",
     "@types/node": "^15.6.0",
     "@types/python-shell": "^0.4.2",
     "axios": "^0.21.1",
@@ -23,6 +24,8 @@
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "python-shell": "^3.0.0",
     "typescript": "^4.2.4"
