--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "expo": "~41.0.1",
     "expo-facebook": "~11.0.5",
     "expo-google-app-auth": "^8.1.7",
+    "expo-image-picker": "~10.1.4",
     "expo-splash-screen": "^0.10.2",
     "expo-status-bar": "^1.0.4",
     "formik": "^2.2.8",
@@ -29,6 +30,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modalize": "^2.0.8",
     "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
